--- a/ChangeLog
+++ b/ChangeLog
@@ -3,3 +3,12 @@ intervalxt Change Log
 =====================
 
 .. current developments
+
+v0.2.0
+====================
+
+**Fixed:**
+
+* Escape `::` since it confuses ASV's HTML output (not surprisingly, since : is not valid in Python method names.)
+
+
